# arm64-editor

./: index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.run/: dev.run.xml
design/: design.plantuml
simulator/: Cargo.toml  Makefile.toml  README.md  copy-out.sh  pkg.sh
simulator/.cargo/: config.toml
simulator/generate-ts-defs/: generate.py  parse_decompiled.py  parse_dwarf.py  readme.md
simulator/pkg/: .dwarfdump.keywords.txt  .gitignore  .wasm.decompiled.keywords.txt  package.json  simulator.d.ts  simulator.js  simulator.wasm  simulator.wasm.d.ts
simulator/scripts/: clean-pkg.py  clean-pkg.sh  pkg.py  pkg.sh  ts-defs.py
simulator/scripts/helpers/: files.py  misc_utils.py  parse_decompiled.py  parse_dwarf.py  rust_type_util.py  test.ipynb  type_util.py  typename.py
simulator/src/: alloc_interface.rs  const_bound.rs  extend_meta.rs  identity.rs  js_interop.rs  lib.rs  native_alloc.rs  params.rs  simulator.rs  transmute_assertions.rs  unsafe_ref.rs  zero_init.rs
simulator/src/components/: branch_predictor.rs  branch_predictor.txt  cache.rs  lru_cache.rs  mem_access.rs  mod.rs  pipeline.rs  simulator.rs  sizes.rs
simulator/src/js_interop/: globals.rs  js_interop.rs  mod.rs  very_unsafe_cell.rs
simulator/src/wasm/: globals.rs  mod.rs  wasm_alloc.rs  wasm_allocator.rs  wasm_mutex.rs
simulator/src/wasm_only/: globals.rs  mod.rs  very_unsafe_cell.rs
simulator/tests/: basic.rs  web.rs
src/: App.css  App.tsx  index.css  inputsEditor.css  inputsEditor.tsx
src/app/: App.css  App.tsx  save.ts
src/chArm/: execute.ts  formatUtil.ts  instructions.ts  interpreter.ts  parser.ts  state.ts  tokenizer.ts
src/codeEditor/: codeEditor.css  codeEditor.tsx  codeHighlighter.tsx  highlighterWithErrors.css  highlighterWithErrors.tsx
src/parsing/: parsing.ts
src/resizable/: resizable.tsx
src/util/: FMap.ts  hooks.ts  refinedTypes.ts  select.tsx  util.ts
src/wasm-interop/: simulator.ts
