[package]
name = "simulator"
version = "0.1.0"
authors = ["njona <n.jonathan.jiang@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typenum = { version = "1.20.1", default-features = false }
hybrid-array = { version = "0.4.13", default-features = false }
macro_rules_attribute = "0.2.2"
[dev-dependencies]

[profile.dev]

# Optimization settings
opt-level = "s" # Small code size
lto = true      # Link-time stripping of unused functions
strip = "none"  # Used and stripped out by later pass
debug = true    # Used and stripped out by later pass
incremental = false

# Assertion settings
debug-assertions = true
overflow-checks = true
panic = "abort" # Don't include heavy code for handling panics in WASM

[profile.test]  # Inherits from dev. We assume this is not run on a WASM target
# Note that tests ignore panic setting and always use unwind behavior

[profile.wasm]      # Basically release profile
inherits = "dev"
debug-assertions = false
overflow-checks = false
codegen-units = 1   # Shouldn't be too slow; we're not dealing with huge amounts of code

[features]
default = ["std"]
std = []